# sap-glue-local-poc-lab

./: .env.example  .gitignore  Makefile  README.es.md  README.md  docker-compose.yml
aws-local/: README.md  bootstrap.sh  create-bucket.sh  create-dynamodb-table.sh
config/: tables.yml
extractor-simulator/: README.md  pyproject.toml
extractor-simulator/src/extractor_simulator/: __init__.py  cli.py  config.py  extractor.py  manifest.py  writer.py
orchestrator/: README.md  pyproject.toml
orchestrator/src/local_orchestrator/: __init__.py  batch_state.py  cli.py  duckdb_loader.py  manifest_reader.py  pipeline.py
sap-simulator/: README.md
sap-simulator/sql/: 00_schema.sql  01_seed_master_data.sql  02_seed_sales_data.sql  03_seed_incremental_changes.sql
scripts/: clean.sh  run-demo.sh  show-results.sh
