[project]
name = "extractor-simulator"
version = "0.1.0"
description = "Extractor simulator for a local SAP-like data lab."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "psycopg[binary]>=3.2",
    "pyarrow>=16.0",
    "pyyaml>=6.0",
]

[project.scripts]
extractor-simulator = "extractor_simulator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
