[project]
name = "local-orchestrator"
version = "0.1.0"
description = "Local manifest-driven orchestrator for loading extracted data into DuckDB."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "duckdb>=1.0.0",
]

[project.scripts]
local-orchestrator = "local_orchestrator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
